# Optimal-Latin-Hypercube-Designs

./: .gitignore  CMakeLists.txt  README.md
LHDs/Cioppa2007/: 129x22.LHD  17x7.LHD  257x29.LHD  33x11.LHD  65x16.LHD
LHDs/Jin2005/: 101x100.LHD  101x51.LHD  129x22.LHD  17x7.LHD  201x101.LHD  257x29.LHD  33x11.LHD  65x16.LHD
src/: AC_Wang2018.cpp  ESE.cpp  ESE.h  ESE_Jin2005.cpp  GA.cpp  GA.h  LHD.cpp  LSGA.cpp  LSGA.h  LaPSO.cpp  LaPSO.h  SA.cpp  SA.h  design.h  example.cpp  metric.cpp
src/algorithm/: ESE.cpp  ESE.h  GA.cpp  GA.h  LSGA.cpp  LSGA.h  LaPSO.cpp  LaPSO.h  SA.cpp  SA.h  Wang2018.cpp  Wang2018.h  algorithm_manager.h  construction_algorithm.h  search_algorithm.h
src/comm/: design.cpp  design.h  utils.h
src/criterion/: avgabscor_criterion.cpp  avgabscor_criterion.h  criterion.h  maxabscor_criterion.cpp  maxabscor_criterion.h  multicriteria.cpp  multicriteria.h  phipl1_criterion.cpp  phipl1_criterion.h  phipl2_criterion.cpp  phipl2_criterion.h
